[gd_scene load_steps=18 format=3 uid="uid://co7loqedfsp3v"]

[ext_resource type="Script" path="res://Scenes/Map.gd" id="1_bkylh"]
[ext_resource type="Texture2D" uid="uid://csx37mtdxbjne" path="res://Assets/Environment/Starfield_02-512x512.png" id="1_yi813"]
[ext_resource type="PackedScene" uid="uid://bktor42ahn8qq" path="res://actors/entities/Player_New.tscn" id="2_48cuk"]
[ext_resource type="Shader" path="res://Scenes/Map.gdshader" id="2_wfpgn"]
[ext_resource type="PackedScene" uid="uid://brfqb2kn5wiub" path="res://actors/entities/Cam.tscn" id="3_h4kop"]
[ext_resource type="PackedScene" uid="uid://dljxv7r0moi3q" path="res://Scenes/UI.tscn" id="3_shvpw"]
[ext_resource type="PackedScene" uid="uid://nk7ajylmjwe5" path="res://Scenes/pause_menu.tscn" id="6_ty56v"]
[ext_resource type="Texture2D" uid="uid://s0d7ekja0nvq" path="res://Assets/Environment/RailgunIcon.png" id="7_8wjpg"]
[ext_resource type="Script" path="res://Scenes/ModuleGUI.gd" id="7_ug4q7"]
[ext_resource type="Texture2D" uid="uid://dfcqls8568aal" path="res://Assets/Environment/Capture.png" id="8_qux1w"]
[ext_resource type="AudioStream" uid="uid://d0scj4spp17po" path="res://Assets/sfx/ost1.mp3" id="8_v6bi0"]
[ext_resource type="Texture2D" uid="uid://c71d4a73qk5eu" path="res://Assets/Environment/DC.png" id="10_bp7a7"]
[ext_resource type="Texture2D" uid="uid://b68e8v6mqmkd1" path="res://Assets/Environment/shieldability.png" id="11_2nby2"]
[ext_resource type="Texture2D" uid="uid://d37j0h7sikdrm" path="res://Assets/Environment/allyability.png" id="12_kairu"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0gsnh"]
shader = ExtResource("2_wfpgn")
shader_parameter/u_time = 0.597
shader_parameter/mouse = Vector2(0.5, 0.5)
shader_parameter/resolution = Vector2(1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kk3kq"]
bg_color = Color(0.0235294, 0.364706, 0.270588, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xl4fr"]
bg_color = Color(0.764706, 0, 0, 1)

[node name="Map" type="Node2D"]
script = ExtResource("1_bkylh")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 3
layer = -100

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_0gsnh")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
layer = -90
visible = false

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(512, 512)

[node name="Sprite" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource("1_yi813")
centered = false

[node name="UICanvas" type="CanvasLayer" parent="."]

[node name="UI" parent="UICanvas" instance=ExtResource("3_shvpw")]
visible = false

[node name="Cam" parent="." instance=ExtResource("3_h4kop")]

[node name="TL" parent="Cam" index="0"]
position = Vector2(-586, 0)

[node name="BR" parent="Cam" index="1"]
position = Vector2(1284, 0)

[node name="SpawnPoint" type="Node2D" parent="."]
position = Vector2(1725, 301)

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 11.038
autostart = true

[node name="AllySpawnTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Sort" type="Node2D" parent="."]
y_sort_enabled = true
position = Vector2(-17, 1)

[node name="Player_New" parent="Sort" instance=ExtResource("2_48cuk")]
position = Vector2(245, 273)

[node name="IngameMenu" type="CanvasLayer" parent="."]

[node name="PauseMenu" parent="IngameMenu" node_paths=PackedStringArray("map") instance=ExtResource("6_ty56v")]
map = NodePath("../..")

[node name="GUI" type="CanvasLayer" parent="."]
script = ExtResource("7_ug4q7")

[node name="HUD" type="Control" parent="GUI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = 496.0
offset_right = -1032.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="AbilitiesBar" type="VBoxContainer" parent="GUI/HUD"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -50.0
offset_right = 300.0
grow_vertical = 0

[node name="RailgunCD" type="TextureProgressBar" parent="GUI/HUD/AbilitiesBar"]
custom_minimum_size = Vector2(40, 40)
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 0
value = 55.0
fill_mode = 4
texture_under = ExtResource("7_8wjpg")
texture_progress = ExtResource("7_8wjpg")
tint_under = Color(0.196078, 0.196078, 0.196078, 1)
tint_progress = Color(0.996078, 0.996078, 0.996078, 1)

[node name="RailgunCDlabel" type="Label" parent="GUI/HUD/AbilitiesBar/RailgunCD"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="TorpedoCD" type="TextureProgressBar" parent="GUI/HUD/AbilitiesBar"]
custom_minimum_size = Vector2(40, 40)
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 0
value = 55.0
fill_mode = 4
texture_under = ExtResource("8_qux1w")
texture_progress = ExtResource("8_qux1w")
tint_under = Color(0.196078, 0.196078, 0.196078, 1)
tint_progress = Color(0.996078, 0.996078, 0.996078, 1)

[node name="TorpedoCDlabel" type="Label" parent="GUI/HUD/AbilitiesBar/TorpedoCD"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="DamageControl" type="TextureProgressBar" parent="GUI/HUD/AbilitiesBar"]
custom_minimum_size = Vector2(40, 40)
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 0
value = 55.0
fill_mode = 4
texture_under = ExtResource("10_bp7a7")
texture_progress = ExtResource("10_bp7a7")
tint_under = Color(0.196078, 0.196078, 0.196078, 1)
tint_progress = Color(0.996078, 0.996078, 0.996078, 1)

[node name="DClabel" type="Label" parent="GUI/HUD/AbilitiesBar/DamageControl"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Shield" type="TextureProgressBar" parent="GUI/HUD/AbilitiesBar"]
custom_minimum_size = Vector2(40, 40)
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 0
value = 55.0
fill_mode = 4
texture_under = ExtResource("11_2nby2")
texture_progress = ExtResource("11_2nby2")
tint_under = Color(0.196078, 0.196078, 0.196078, 1)
tint_progress = Color(0.996078, 0.996078, 0.996078, 1)

[node name="ShieldCDlabel" type="Label" parent="GUI/HUD/AbilitiesBar/Shield"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Ally" type="TextureProgressBar" parent="GUI/HUD/AbilitiesBar"]
custom_minimum_size = Vector2(40, 40)
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 0
value = 55.0
fill_mode = 4
texture_under = ExtResource("12_kairu")
texture_progress = ExtResource("12_kairu")
tint_under = Color(0.196078, 0.196078, 0.196078, 1)
tint_progress = Color(0.996078, 0.996078, 0.996078, 1)

[node name="AllyCDlabel" type="Label" parent="GUI/HUD/AbilitiesBar/Ally"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="CheckButton" type="CheckButton" parent="GUI/HUD"]
layout_mode = 0
offset_left = 384.0
offset_top = -496.0
offset_right = 549.0
offset_bottom = -465.0
text = "Launch Drones"
alignment = 1

[node name="PLayerHP" type="ProgressBar" parent="GUI"]
offset_left = 17.0
offset_top = 4.0
offset_right = 284.0
offset_bottom = 27.0
theme_override_styles/background = SubResource("StyleBoxFlat_kk3kq")
theme_override_styles/fill = SubResource("StyleBoxFlat_xl4fr")
value = 100.0
fill_mode = 1
show_percentage = false

[node name="Label" type="Label" parent="GUI/PLayerHP"]
layout_mode = 0
offset_left = 113.0
offset_top = -1.0
offset_right = 159.0
offset_bottom = 25.0
text = "50000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Resources" type="RichTextLabel" parent="GUI"]
offset_left = 297.0
offset_top = 4.0
offset_right = 384.0
offset_bottom = 27.0
bbcode_enabled = true
text = "9999"
fit_content = true
scroll_active = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_v6bi0")
volume_db = -30.198

[connection signal="timeout" from="EnemyTimer" to="." method="_on_enemy_timer_timeout"]
[connection signal="update_moduleD_UI" from="GUI" to="GUI" method="_on_update_module_d_ui" binds= [0]]
[connection signal="update_module_UI" from="GUI" to="GUI" method="_on_update_module_ui" binds= [0]]
[connection signal="toggled" from="GUI/HUD/CheckButton" to="." method="_on_check_button_toggled"]

[editable path="Cam"]
